--- a/src/templates/client/en/hot_news.html
+++ b/src/templates/client/en/hot_news.html
@@ -9,7 +9,7 @@
                         <article class="most-read-item">
                             <span class="rank">${index + 1}</span>
                             <div class="content">
-                                <h4><a href="/news/${news.slug}">${news.title}</a></h4>
+                                <h4><a href="/en/news/${news.slug}">${news.title}</a></h4>
                                 <span class="meta"><i class="far fa-eye"></i> ${formatViewCount(news.view_count)}</span>
                             </div>
                         </article>
