--- a/src/templates/admin/profile.html
+++ b/src/templates/admin/profile.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style_profile.css') }}">
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+{% if user.role|string() == 'admin' %}
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
+{% else %}
+<script src="{{ url_for('static', filename='js/editor.js') }}"></script>
+{% endif %}
+
 </head>
 <body>
     <div class="container py-5">
@@ -560,6 +566,6 @@
                 });
             });
         }
-    </script>   
+    </script>
 </body>
 </html>
