update hot news

--- a/src/templates/client/vn/category.html
+++ b/src/templates/client/vn/category.html
@@ -128,5 +128,5 @@
     </main>
 {% endblock %}
 {% block scripts %}
-{% include 'client/en/hot_news.html' %}
+{% include 'client/vn/hot_news.html' %}
 {% endblock %}
