--- a/src/templates/client/vn/news_detail.html
+++ b/src/templates/client/vn/news_detail.html
@@ -235,7 +235,7 @@
 {% endblock %}
 
 {% block scripts %}
-{% include 'client/en/hot_news.html' %}
+{% include 'client/vn/hot_news.html' %}
 <script>
     // Handle Save/Unsave News
     const saveNewsBtn = document.getElementById('saveNewsBtn');
