--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -15,7 +15,7 @@
         <div class="user-info">
             <div class="user-avatar">
                 {% if user.avatar %}
-                    <img src="/{{ user.avatar }}" alt="Avatar" class="img-fluid">
+                    <img src="/{{ user.avatar }}" alt="Avatar" class="img-fluid rounded-circle">
                 {% else %}
                     <i class="fas fa-user-shield"></i>
                 {% endif %}
